--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
         container_name: web
         ports:
             - "5000:5000"
-        command: gunicorn -w 2 -t 2400 -b :5000 main:app
+        command: gunicorn -t 2400 -b :5000 main:app
         volumes:
             - .:/code
         env_file:
@@ -29,6 +29,7 @@ services:
             - BUCKET=${BUCKET}
             - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
             - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+            - WORKER=True
         sysctls:
             net.core.somaxconn: '511'
         depends_on:
