--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ author = Scott McAllister
 version = 1.0.0
 maintainer = csmcallister
 maintainer_email = mcallistercs@gmail.com
-description = Binarization of End User License Agreement Regression (BEULAR)
+description = Binarization of End User License Agreement Recommendations (BEULAR)
 long_description = file: README.md
 long_description_content_type = text/markdown
 
