--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,3 @@
-*.jpg
-app/static/uploads/*.png
 .vscode/
 .env/
 env/
@@ -7,7 +5,12 @@ __pycache__/
 .pytest_cache/
 docs/
 .gitignore
+.git
 .python-version
 *.csv
 *.ipynb
 *.md
+*.bin
+rfc.joblib
+gbc.joblib
+*.npy
