--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,7 @@ docs/
 *.ipynb
 *.pkl
 *.bin
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
